Projects Section Updated

--- a/index.html
+++ b/index.html
@@ -27,31 +27,66 @@
 
         <main>
             <section id="about">
-                <h2>About</h2>
+                <h2 class="section_heading">About</h2>
                 <p>Hi, I'm Omar! </p>
             </section>
 
             <section id="projects">
-                <h2>Projects</h2>
+                <h2 class="section_heading">Projects</h2>
 
-                <h3>Software</h3>
-                <ul class="flex flex-wrap justify-center space-x-4">
-                    <li>Forehead Mass Index (FMI)</li>
-                </ul>
+                <!-- <h3>Software</h3> -->
+                
+                <section id="project_section">
+                    <ul id="FMI" class="skillset">
+                        <h3>Forehead Mass Index (FMI)</h3>
 
-                <h3>Hardware</h3>
-                <ul class="flex flex-wrap justify-center space-x-4">
-                    <li>Smiley PCB</li>
-                </ul>
+                        <img src="">
+                        <li>Type: Software</li>
+                        <li>Description: A Website to calculate someone's Forehead Mass Index (FMI).</li>
+                        <br>
+                        <li>It was created using HTML, CSS & JS and Hosted on Github.</li>
+                        </br>
+                        <li>From this I learned the basic structure and functionality of websites. The Website can be found <a href="https://3omargaad.github.io/FMI/">here</a></li>
+                    </ul>
 
-                <h3>Integrated</h3>
-                <ul class="flex flex-wrap justify-center space-x-4">
-                    <li>Box of Many Beats (BoMB)</li>
-                </ul>
+                    <ul id="Smiley_PCB" class="skillset">
+                        <h3>Smiley PCB</h3>
+                        <li>Type: Hardware</li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        </br>
+                    </ul>
+
+                    <ul id="BoMB" class="skillset">
+                        <h3>Box of Marvellous Beats (BoMB)</h3>
+                        <li>Type: Integrated</li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        </br>
+                    </ul>
+
+                    <ul id="Project_Website" class="skillset">
+                        <h3>Project Website</h3>
+                        <li>Type: Software</li>
+                        <li>Description: </li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        </br>
+                    </ul>
+                </section>
+
+                <!-- <h3>Hardware</h3> -->
+
+                <!-- <h3>Integrated</h3> -->
             </section>
 
             <section id="skills">
-                <h2>Skills</h2>
+                <h2 class="section_heading">Skills</h2>
                 <section id="skill_section">
                     <ul id="software" class="skillset">
                         <h3>Software</h3>
@@ -86,7 +121,7 @@
             </section>
 
             <section id="contact">
-                <h2>Contact</h2>
+                <h2 class="section_heading">Contact</h2>
                 <p>Get in touch at: 3omargaad@gmail.com or <a href="https://www.linkedin.com/in/omar-gaad-663283340/">LinkedIn</a></p>
             </section>
         </main>
