Updates Style & Added Animation

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-        <h1 id="name">Omar Gaad</h1>
+        <h1 id="name">Project <br><br>Omar</h1>
 
         <nav class="navbar">
             <ul>
@@ -28,7 +28,7 @@
         <main>
             <section id="about">
                 <h2 class="section_heading">About</h2>
-                <p>Hi, I'm Omar! </p>
+                <p>Hi, I'm Omar Gaad! I'm an aspiring Computer Engineer whose interested in using both Hardware and Software to bring my ideas to life and solve problems. <br> To build up my skill set and explore different areas in the field, I've made a few fun projects, I hope you'll enjoy.</p>
             </section>
 
             <section id="projects">
@@ -72,7 +72,7 @@
                     <ul id="Project_Website" class="skillset">
                         <h3>Project Website</h3>
                         <li>Type: Software</li>
-                        <li>Description: </li>
+                        <li>Description: This very website you are looking at was developed by me. By learning more advanced techniques in CSS, like animation, transitions, tranformations, I was able to make this website feel more interactive and look more graphically pleasing. </li>
                         <li></li>
                         <li></li>
                         <li></li>
