Added Boilerplate Pages for FMI & Smiley PCB

--- a/index.html
+++ b/index.html
@@ -37,27 +37,28 @@
                 <!-- <h3>Software</h3> -->
                 
                 <section id="project_section">
-                    <ul id="FMI" class="skillset">
+                    <a href="fmi.html" target="_blank"> <ul id="FMI" class="skillset">
                         <h3>Forehead Mass Index (FMI)</h3>
 
-                        <img src="">
+                        <img src="images/FMI_icon.png" alt="FMI Icon" class="project_icon">
                         <li>Type: Software</li>
-                        <li>Description: A Website to calculate someone's Forehead Mass Index (FMI).</li>
+                        <li>Description:<i> A Website to calculate someone's Forehead Mass Index (FMI). It's like BMI but for Foreheads.</i></li>
                         <br>
-                        <li>It was created using HTML, CSS & JS and Hosted on Github.</li>
-                        </br>
-                        <li>From this I learned the basic structure and functionality of websites. The Website can be found <a href="https://3omargaad.github.io/FMI/">here</a></li>
                     </ul>
-
-                    <ul id="Smiley_PCB" class="skillset">
+                    </a>
+                    
+                    <a href="smiley_pcb.html" target="_blank"> 
+                        <ul id="Smiley_PCB" class="skillset">
                         <h3>Smiley PCB</h3>
+                        <img src="images/smiley_icon.png" alt="Smiley PCB Icon" class="project_icon">
                         <li>Type: Hardware</li>
-                        <li></li>
+                        <li>Description:<i>A simple circuit the starts of frowny :( but when you push a button, it smiles :)</i></li>
                         <li></li>
                         <li></li>
                         <li></li>
                         </br>
                     </ul>
+                    </a>
 
                     <ul id="BoMB" class="skillset">
                         <h3>Box of Marvellous Beats (BoMB)</h3>
@@ -69,8 +70,8 @@
                         </br>
                     </ul>
 
-                    <ul id="Project_Website" class="skillset">
-                        <h3>Project Website</h3>
+                    <ul id="Project Omar" class="skillset">
+                        <h3>Project Omar</h3>
                         <li>Type: Software</li>
                         <li>Description: This very website you are looking at was developed by me. By learning more advanced techniques in CSS, like animation, transitions, tranformations, I was able to make this website feel more interactive and look more graphically pleasing. </li>
                         <li></li>
